--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,75 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+
+body {
+  background-color: #222222;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3 {
+  font-weight: 300;
+}
+
 .App {
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  padding-top: 120px;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 70px;
+  margin-top: 5px;
+}
+
+.App-logo-text {
+  font-weight: 700;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: #353535;
+  padding: 5px;
   color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: 700;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  -webkit-box-shadow: 0px 14px 49px -12px rgba(0,0,0,0.48);
+  -moz-box-shadow: 0px 14px 49px -12px rgba(0,0,0,0.48);
+  box-shadow: 0px 14px 49px -12px rgba(0,0,0,0.48);
 }
 
 .App-intro {
-  font-size: large;
+  font-size: 2em;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.App-nav {
+  padding: 5px;
+  font-weight: 300;
+}
+
+.App-nav ul li {
+  color: #FFFFFF;
+  list-style-type: none;
+  float: left;
+  padding: 10px 30px;
+  margin: 0px 10px;
+  cursor: pointer;
+  font-size: 1.1em;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.App-nav ul li:hover {
+  color: #1ED760;
+  border: 1px solid #1ED760;
+  transition: 0.5s;
 }
