--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ h1, h2, h3 {
   justify-content: space-between;
   font-weight: 700;
   position: fixed;
+  z-index: 999;
   width: 100%;
   top: 0;
   -webkit-box-shadow: 0px 14px 49px -12px rgba(0,0,0,0.48);
